--- a/BlogWebsiteFront/src/App.css
+++ b/BlogWebsiteFront/src/App.css
@@ -1,3 +1,18 @@
+:root {
+  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  line-height: 1.5;
+  font-weight: 400;
+
+  color-scheme: light dark;
+  color: rgba(255, 255, 255, 0.87);
+  background-color: #242424;
+
+  font-synthesis: none;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
 body {
   margin: 0;
   font-family: Arial, sans-serif;
@@ -6,11 +21,8 @@ body {
   justify-content: center;
   align-items: center;
   min-height: 100vh;
- 
   background-size: cover;
 }
-
-
 
 .form {
   align-items: center;
@@ -24,7 +36,7 @@ body {
   padding: 20px;
   max-width: 560px;
   width: 100%;
-  margin:0 auto;
+  margin: 0 auto;
 }
 
 .form label {
@@ -42,7 +54,7 @@ body {
   outline: none;
   font-size: 1.2rem;
   transition: background 0.3s ease;
- align-items: center;
+  align-items: center;
   justify-content: center;
   display: flex;
 }
@@ -67,7 +79,7 @@ body {
   margin-right: 10px;
   padding: 10px 20px;
   text-decoration: none;
-  border-radius: 10px
+  border-radius: 10px;
 }
 
 .form button:hover {
@@ -76,18 +88,16 @@ body {
   color: #fff;
 }
 
-
 .container {
   max-width: 800px;
+  min-width: 560px;
   margin: 0 auto;
   margin-top: 10%;
 }
 
-
 .post-list {
   list-style: none;
   padding: 0;
-
 }
 
 .post-item {
@@ -100,7 +110,6 @@ body {
   padding: 20px;
   margin: 20px 0;
   position: relative;
-  transition: background 0.3s ease, transform 0.3s ease;
 }
 
 .post-item h2 {
@@ -114,6 +123,7 @@ body {
   height: auto;
   display: block;
   margin: 10px 0;
+  border-radius: 10px;
 }
 
 .post-item p {
@@ -132,33 +142,35 @@ body {
   justify-content: left;
 }
 
-.edit-button {
-  position: relative;
-  bottom: 0px;
-  margin-left: 10px;
-  background-color: #4CAF50;
-  color: white;
+.post-actions {
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 10px;
+}
+
+.edit-button, .delete-button {
+  background: rgba(255, 255, 255, 0.6);
+  color: #000;
   padding: 10px 20px;
   text-decoration: none;
   border-radius: 10px;
+  margin: 0 5px;
+  cursor: pointer;
+  transition: background 0.3s ease, transform 0.3s ease;
+}
+
+.edit-button {
+  background-color: #4CAF50;
 }
 
 .delete-button {
-  position: relative;
-  bottom: 0px;
-  margin-right: 1px;
   background-color: #f44336;
-  color: white;
-  padding: 10px 20px;
-  text-decoration: none;
-  border-radius: 10px;
 }
 
 .edit-button:hover, .delete-button:hover {
   background: rgba(255, 255, 255, 0.8);
   transform: scale(1.05);
 }
-
 
 .post-actions-button {
   position: fixed;
@@ -200,7 +212,6 @@ body {
   -webkit-backdrop-filter: blur(10px);
   border-bottom: 1px solid rgba(255, 255, 255, 0.3);
   z-index: 1000;
-  
 }
 
 .navbar-content {
@@ -210,7 +221,6 @@ body {
   width: 100%;
   max-width: 1200px;
   margin: 0 auto;
-
 }
 
 .navbar-right {
@@ -244,7 +254,6 @@ body {
 .navbar-right {
   display: flex;
   align-items: center;
-
 }
 
 .navbar-button {
@@ -256,25 +265,14 @@ body {
   margin-left: 10px;
   cursor: pointer;
   transition: background 0.3s ease, transform 0.3s ease;
-
+  text-decoration: none;
 }
 
 .navbar-button:hover {
   background: rgb(62, 150, 0);
   transform: scale(1.05);
   color: #fff;
-
 }
-
-.post-actions {
-  display: flex;
-  justify-content: flex-end;
-  margin-top: 10px;
-}
-
-
-
-
 
 .post a {
   color: #fff;
@@ -318,3 +316,49 @@ body {
   color: white;
   padding: 10px;
 }
+
+@media (max-width: 600px) {
+  .container {
+    width: 80%;
+    margin-top: 10%;
+    gap: 10%;
+  }
+
+  .form, .post-item {
+    padding: 10px;
+    margin: 0 auto;
+    width: 60%;
+   
+  }
+
+  .form input, .form textarea, .form button, .recaptcha {
+    width: 100%;
+    margin: 5px 0;
+    padding: 5px;
+  }
+
+  .edit-button, .delete-button {
+    padding: 5px 10px;
+    margin: 5px 2px;
+  }
+
+  .post-actions {
+    flex-direction: column;
+    align-items: flex-end;
+  }
+
+  .navbar {
+    padding: 5px 10px;
+  }
+
+  .navbar-title {
+    font-size: 18px;
+  }
+
+  .navbar-button {
+    padding: 5px 10px;
+    margin-left: 5px;
+  }
+}
+
+
