--- a/BlogWebsiteFront/src/App.css
+++ b/BlogWebsiteFront/src/App.css
@@ -238,6 +238,23 @@ body {
   cursor: pointer;
   transition: background 0.3s ease;
 }
+.navbar-profile-link {
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  color: #fff;
+  margin-right: 10px;
+}
+.navbar-profile-image {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  margin-right: 10px;
+}
+.welcome-msg {
+  font-size: 16px;
+  margin-right: 10px;
+}
 
 .navbar-title {
   color: #fff;
@@ -251,10 +268,6 @@ body {
   color: #55ff00;
 }
 
-.navbar-right {
-  display: flex;
-  align-items: center;
-}
 
 .navbar-button {
   background: rgba(255, 255, 255, 0.6);
@@ -272,6 +285,11 @@ body {
   background: rgb(62, 150, 0);
   transform: scale(1.05);
   color: #fff;
+}
+
+.navbar-button:link,
+.navbar-button:visited {
+  color: #333;
 }
 
 .post a {
